dark mode links color correction

--- a/assets/css/blog-styles.css
+++ b/assets/css/blog-styles.css
@@ -747,6 +747,14 @@ h4 {
   margin-top: 2rem;
 }
 
+.blog-post__content a {
+  color: var(--first-color);
+}
+
+.dark-theme .blog-post__content a {
+  color: var(--first-color-lighter);
+}
+
 .blog-post__content p {
   margin-bottom: 1.5rem;
 }
